backend/wishlist-service/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wishlist-service
  labels:
    app: wishlist-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wishlist-service
  template:
    metadata:
      labels:
        app: wishlist-service
    spec:
      serviceAccountName: wishlist-service
      containers:
        - name: wishlist-service
          image: amazon-clone/wishlist-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8015
          readinessProbe:
            httpGet:
              path: /readyz/
              port: 8015
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz/
              port: 8015
            initialDelaySeconds: 10
            periodSeconds: 15
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
