backend/wishlist-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wishlist-service
  labels:
    app: wishlist-service
spec:
  selector:
    app: wishlist-service
  ports:
    - port: 80
      targetPort: 8015
      protocol: TCP
  type: ClusterIP
